--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -4,23 +4,25 @@
 #
 #    pip-compile --output-file=src/requirements-app.txt src/requirements-app.in
 #
-attrs==20.1.0             # via automat, service-identity, twisted
+attrs==20.3.0             # via automat, service-identity, twisted
 automat==20.2.0           # via twisted
-certifi==2020.6.20        # via requests
-cffi==1.14.2              # via cryptography
-chardet==3.0.4            # via requests
+certifi==2020.12.5        # via requests
+cffi==1.14.4              # via cryptography
+chardet==4.0.0            # via requests
 click==7.0.0              # via -r src/requirements-app.in
 constantly==15.1.0        # via twisted
-cryptography==3.1         # via pyopenssl, scrapy, service-identity
+cryptography==3.3.1       # via pyopenssl, scrapy, service-identity
 cssselect==1.1.0          # via parsel, scrapy
-faker==4.1.2              # via -r src/requirements-app.in
+faker==5.0.2              # via -r src/requirements-app.in
 hyperlink==20.0.1         # via twisted
 idna==2.10                # via hyperlink, requests
 incremental==17.5.0       # via twisted
-itemadapter==0.1.0        # via itemloaders, scrapy
-itemloaders==1.0.2        # via scrapy
+itemadapter==0.2.0        # via itemloaders, scrapy
+itemloaders==1.0.4        # via scrapy
 jmespath==0.10.0          # via itemloaders
-lxml==4.5.2               # via parsel, scrapy
+lxml==4.6.2               # via parsel, scrapy
+numpy==1.19.4             # via opencv-python
+opencv-python==4.4.0.46   # via -r src/requirements-app.in
 parsel==1.6.0             # via itemloaders, scrapy
 protego==0.1.16           # via scrapy
 pyasn1-modules==0.2.8     # via service-identity
@@ -28,21 +30,21 @@ pyasn1==0.4.8             # via pyasn1-modules, service-identity
 pycparser==2.20           # via cffi
 pydispatcher==2.0.5       # via scrapy
 pyhamcrest==2.0.2         # via twisted
-pyopenssl==19.1.0         # via scrapy
+pyopenssl==20.0.1         # via scrapy
 python-anticaptcha==0.7.1  # via -r src/requirements-app.in
 python-dateutil==2.8.1    # via faker
 queuelib==1.5.0           # via scrapy
-requests==2.24.0          # via -r src/requirements-app.in, python-anticaptcha
-scrapy==2.3.0             # via -r src/requirements-app.in
-selenium-wire==2.1.1      # via -r src/requirements-app.in
+requests==2.25.1          # via -r src/requirements-app.in, python-anticaptcha
+scrapy==2.4.1             # via -r src/requirements-app.in
+selenium-wire==2.1.2      # via -r src/requirements-app.in
 selenium==3.141.0         # via -r src/requirements-app.in, selenium-wire
 service-identity==18.1.0  # via scrapy
 six==1.15.0               # via automat, cryptography, parsel, protego, pyopenssl, python-anticaptcha, python-dateutil, w3lib
 text-unidecode==1.3       # via faker
 twisted==20.3.0           # via scrapy
-urllib3==1.25.10          # via requests, selenium
+urllib3==1.26.2           # via requests, selenium
 w3lib==1.22.0             # via itemloaders, parsel, scrapy
-zope.interface==5.1.0     # via scrapy, twisted
+zope.interface==5.2.0     # via scrapy, twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
