--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,8 +4,8 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-ansible-base==2.10.4      # via ansible
-ansible==2.10.4           # via -r requirements-dev.in
+ansible-base==2.10.8      # via ansible
+ansible==3.3.0            # via -r requirements-dev.in
 attrs==20.3.0             # via -r src/requirements-app.txt, automat, pytest, service-identity, twisted
 automat==20.2.0           # via -r src/requirements-app.txt, twisted
 certifi==2020.12.5        # via -r src/requirements-app.txt, requests
@@ -13,10 +13,10 @@ cffi==1.14.4              # via -r src/requirements-app.txt, cryptography
 chardet==4.0.0            # via -r src/requirements-app.txt, requests
 click==7.0.0              # via -r src/requirements-app.txt, shub
 constantly==15.1.0        # via -r src/requirements-app.txt, twisted
-coverage==5.3.1           # via pytest-cov
+coverage==5.5             # via pytest-cov
 cryptography==3.3.1       # via -r src/requirements-app.txt, ansible-base, pyopenssl, scrapy, service-identity
 cssselect==1.1.0          # via -r src/requirements-app.txt, parsel, scrapy
-docker==4.4.0             # via shub
+docker==5.0.0             # via shub
 faker==5.0.2              # via -r src/requirements-app.txt
 hyperlink==20.0.1         # via -r src/requirements-app.txt, twisted
 idna==2.10                # via -r src/requirements-app.txt, hyperlink, requests
@@ -24,13 +24,13 @@ incremental==17.5.0       # via -r src/requirements-app.txt, twisted
 iniconfig==1.1.1          # via pytest
 itemadapter==0.2.0        # via -r src/requirements-app.txt, itemloaders, scrapy
 itemloaders==1.0.4        # via -r src/requirements-app.txt, scrapy
-jinja2==2.11.2            # via ansible-base
+jinja2==2.11.3            # via ansible-base
 jmespath==0.10.0          # via -r src/requirements-app.txt, itemloaders
 lxml==4.6.2               # via -r src/requirements-app.txt, parsel, scrapy
 markupsafe==1.1.1         # via jinja2
 numpy==1.19.4             # via -r src/requirements-app.txt, opencv-python
 opencv-python==4.4.0.46   # via -r src/requirements-app.txt
-packaging==20.8           # via ansible-base, pytest
+packaging==20.9           # via ansible-base, pytest
 parsel==1.6.0             # via -r src/requirements-app.txt, itemloaders, scrapy
 pluggy==0.13.1            # via pytest
 protego==0.1.16           # via -r src/requirements-app.txt, scrapy
@@ -42,11 +42,11 @@ pydispatcher==2.0.5       # via -r src/requirements-app.txt, scrapy
 pyhamcrest==2.0.2         # via -r src/requirements-app.txt, twisted
 pyopenssl==20.0.1         # via -r src/requirements-app.txt, scrapy
 pyparsing==2.4.7          # via packaging
-pytest-cov==2.10.1        # via -r requirements-dev.in
-pytest==6.2.1             # via -r requirements-dev.in, pytest-cov
+pytest-cov==2.11.1        # via -r requirements-dev.in
+pytest==6.2.3             # via -r requirements-dev.in, pytest-cov
 python-anticaptcha==0.7.1  # via -r src/requirements-app.txt
 python-dateutil==2.8.1    # via -r src/requirements-app.txt, faker
-pyyaml==5.3.1             # via ansible-base, shub
+pyyaml==5.4.1             # via ansible-base, shub
 queuelib==1.5.0           # via -r src/requirements-app.txt, scrapy
 requests==2.25.1          # via -r src/requirements-app.txt, docker, python-anticaptcha, scrapinghub, shub
 retrying==1.3.3           # via scrapinghub, shub
@@ -55,15 +55,15 @@ scrapy==2.4.1             # via -r src/requirements-app.txt
 selenium-wire==2.1.2      # via -r src/requirements-app.txt
 selenium==3.141.0         # via -r src/requirements-app.txt, selenium-wire
 service-identity==18.1.0  # via -r src/requirements-app.txt, scrapy
-shub==2.12.0              # via -r requirements-dev.in
-six==1.15.0               # via -r src/requirements-app.txt, automat, cryptography, docker, parsel, protego, pyopenssl, python-anticaptcha, python-dateutil, retrying, scrapinghub, shub, w3lib, websocket-client
+shub==2.13.0              # via -r requirements-dev.in
+six==1.15.0               # via -r src/requirements-app.txt, automat, cryptography, parsel, protego, pyopenssl, python-anticaptcha, python-dateutil, retrying, scrapinghub, shub, w3lib, websocket-client
 text-unidecode==1.3       # via -r src/requirements-app.txt, faker
 toml==0.10.2              # via pytest, shub
-tqdm==4.11.2              # via shub
+tqdm==4.55.1              # via shub
 twisted==20.3.0           # via -r src/requirements-app.txt, scrapy
 urllib3==1.26.2           # via -r src/requirements-app.txt, requests, selenium
 w3lib==1.22.0             # via -r src/requirements-app.txt, itemloaders, parsel, scrapy
-websocket-client==0.57.0  # via docker
+websocket-client==0.58.0  # via docker
 zope.interface==5.2.0     # via -r src/requirements-app.txt, scrapy, twisted
 
 # The following packages are considered to be unsafe in a requirements file:
