--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -62,11 +62,11 @@ cffi==1.15.0
     #   cryptography
 cfgv==3.3.1
     # via pre-commit
-charset-normalizer==2.0.10
+charset-normalizer==2.0.12
     # via
     #   -r src/requirements-app.txt
     #   requests
-click==8.0.3
+click==8.0.4
     # via
     #   -r src/requirements-app.txt
     #   black
@@ -100,11 +100,11 @@ docker-py==1.10.6
     # via shub
 docker-pycreds==0.4.0
     # via docker-py
-faker==11.3.0
+faker==13.2.0
     # via -r src/requirements-app.txt
 filelock==3.6.0
     # via virtualenv
-flask==2.0.2
+flask==2.0.3
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
@@ -141,7 +141,7 @@ idna==3.3
     #   requests
     #   trio
     #   urllib3
-importlib-metadata==4.10.1
+importlib-metadata==4.11.1
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
@@ -160,7 +160,7 @@ itemloaders==1.0.4
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-itsdangerous==2.0.1
+itsdangerous==2.1.0
     # via
     #   -r src/requirements-app.txt
     #   flask
@@ -182,12 +182,12 @@ ldap3==2.9.1
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-lxml==4.7.1
+lxml==4.8.0
     # via
     #   -r src/requirements-app.txt
     #   parsel
     #   scrapy
-markupsafe==2.0.1
+markupsafe==2.1.0
     # via
     #   -r src/requirements-app.txt
     #   jinja2
@@ -201,7 +201,7 @@ mypy-extensions==0.4.3
     # via black
 nodeenv==1.6.0
     # via pre-commit
-numpy==1.22.1
+numpy==1.22.2
     # via
     #   -r src/requirements-app.txt
     #   opencv-python
@@ -240,7 +240,7 @@ pluggy==1.0.0
     # via pytest
 pre-commit==2.17.0
     # via -r requirements-dev.in
-protego==0.1.16
+protego==0.2.1
     # via
     #   -r src/requirements-app.txt
     #   scrapy
@@ -273,7 +273,7 @@ pycparser==2.21
     #   -r src/requirements-app.txt
     #   cffi
 pycryptodome==3.14.1
-    # via -r requirements-dev.in
+    # via -r src/requirements-app.txt
 pydispatcher==2.0.5
     # via
     #   -r src/requirements-app.txt
@@ -307,6 +307,7 @@ pysocks==1.7.1
     # via
     #   -r src/requirements-app.txt
     #   selenium-wire
+    #   urllib3
 pytest==7.0.1
     # via
     #   -r requirements-dev.in
@@ -357,12 +358,12 @@ scrapinghub==2.3.1
     # via shub
 scrapy==2.4.1
     # via -r src/requirements-app.txt
-selenium==4.1.0
+selenium==4.1.2
     # via
     #   -r src/requirements-app.txt
     #   selenium-wire
     #   undetected-chromedriver
-selenium-wire==4.6.0
+selenium-wire==4.6.1
     # via -r src/requirements-app.txt
 service-identity==21.1.0
     # via
@@ -395,10 +396,6 @@ sortedcontainers==2.4.0
     #   -r src/requirements-app.txt
     #   mitmproxy
     #   trio
-text-unidecode==1.3
-    # via
-    #   -r src/requirements-app.txt
-    #   faker
 toml==0.10.2
     # via
     #   pre-commit
@@ -418,7 +415,7 @@ tqdm==4.62.3
     #   -r src/requirements-app.txt
     #   pyppeteer
     #   shub
-trio==0.19.0
+trio==0.20.0
     # via
     #   -r src/requirements-app.txt
     #   selenium
@@ -427,11 +424,11 @@ trio-websocket==0.9.2
     # via
     #   -r src/requirements-app.txt
     #   selenium
-twisted==21.7.0
+twisted==22.1.0
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-typing-extensions==4.0.1
+typing-extensions==4.1.1
     # via
     #   -r src/requirements-app.txt
     #   black
@@ -440,7 +437,7 @@ ujson==5.1.0
     # via -r src/requirements-app.txt
 undetected-chromedriver==3.1.3
     # via -r src/requirements-app.txt
-urllib3[secure]==1.26.8
+urllib3[secure,socks]==1.26.8
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
@@ -460,12 +457,12 @@ w3lib==1.22.0
     #   scrapy
 websocket-client==1.2.3
     # via docker-py
-websockets==10.1
+websockets==10.2
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
     #   undetected-chromedriver
-werkzeug==2.0.2
+werkzeug==2.0.3
     # via
     #   -r src/requirements-app.txt
     #   flask
