--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -40,9 +40,9 @@ certifi==2021.10.8
     #   urllib3
 cffi==1.15.0
     # via cryptography
-charset-normalizer==2.0.10
+charset-normalizer==2.0.12
     # via requests
-click==8.0.3
+click==8.0.4
     # via
     #   -r src/requirements-app.in
     #   flask
@@ -60,9 +60,9 @@ cssselect==1.1.0
     # via
     #   parsel
     #   scrapy
-faker==11.3.0
+faker==13.2.0
     # via -r src/requirements-app.in
-flask==2.0.2
+flask==2.0.3
     # via mitmproxy
 h11==0.12.0
     # via
@@ -87,7 +87,7 @@ idna==3.3
     #   requests
     #   trio
     #   urllib3
-importlib-metadata==4.10.1
+importlib-metadata==4.11.1
     # via pyppeteer
 incremental==21.3.0
     # via twisted
@@ -97,7 +97,7 @@ itemadapter==0.4.0
     #   scrapy
 itemloaders==1.0.4
     # via scrapy
-itsdangerous==2.0.1
+itsdangerous==2.1.0
     # via flask
 jinja2==3.0.3
     # via flask
@@ -109,17 +109,17 @@ kaitaistruct==0.9
     #   selenium-wire
 ldap3==2.9.1
     # via mitmproxy
-lxml==4.7.1
+lxml==4.8.0
     # via
     #   parsel
     #   scrapy
-markupsafe==2.0.1
+markupsafe==2.1.0
     # via jinja2
 mitmproxy==7.0.4
     # via -r src/requirements-app.in
 msgpack==1.0.3
     # via mitmproxy
-numpy==1.22.1
+numpy==1.22.2
     # via opencv-python
 opencv-python==4.5.5.62
     # via -r src/requirements-app.in
@@ -131,7 +131,7 @@ parsel==1.6.0
     #   scrapy
 passlib==1.7.4
     # via mitmproxy
-protego==0.1.16
+protego==0.2.1
     # via scrapy
 protobuf==3.18.1
     # via mitmproxy
@@ -149,6 +149,8 @@ pyasn1-modules==0.2.8
     # via service-identity
 pycparser==2.21
     # via cffi
+pycryptodome==3.14.1
+    # via -r src/requirements-app.in
 pydispatcher==2.0.5
     # via scrapy
 pyee==8.2.2
@@ -170,7 +172,9 @@ pyppeteer==1.0.2
 pyppeteer-stealth==2.7.3
     # via -r src/requirements-app.in
 pysocks==1.7.1
-    # via selenium-wire
+    # via
+    #   selenium-wire
+    #   urllib3
 python-anticaptcha==0.7.1
     # via -r src/requirements-app.in
 python-dateutil==2.8.2
@@ -183,10 +187,10 @@ requests==2.27.1
     #   anticaptchaofficial
     #   python-anticaptcha
     #   undetected-chromedriver
-ruamel.yaml==0.17.16
+ruamel-yaml==0.17.16
     # via mitmproxy
-ruamel.yaml.clib==0.2.6
-    # via ruamel.yaml
+ruamel-yaml-clib==0.2.6
+    # via ruamel-yaml
 scrapy==2.4.1
     # via -r src/requirements-app.in
 selenium==4.1.0
@@ -194,7 +198,7 @@ selenium==4.1.0
     #   -r src/requirements-app.in
     #   selenium-wire
     #   undetected-chromedriver
-selenium-wire==4.6.0
+selenium-wire==4.6.1
     # via -r src/requirements-app.in
 service-identity==21.1.0
     # via scrapy
@@ -214,27 +218,25 @@ sortedcontainers==2.4.0
     # via
     #   mitmproxy
     #   trio
-text-unidecode==1.3
-    # via faker
 tornado==6.1
     # via mitmproxy
 tqdm==4.62.3
     # via pyppeteer
-trio==0.19.0
+trio==0.20.0
     # via
     #   selenium
     #   trio-websocket
 trio-websocket==0.9.2
     # via selenium
-twisted==21.7.0
+twisted==22.1.0
     # via scrapy
-typing-extensions==4.0.1
+typing-extensions==4.1.1
     # via twisted
 ujson==5.1.0
     # via -r src/requirements-app.in
 undetected-chromedriver==3.1.3
     # via -r src/requirements-app.in
-urllib3[secure]==1.26.8
+urllib3[secure,socks]==1.26.8
     # via
     #   pyppeteer
     #   requests
@@ -246,11 +248,11 @@ w3lib==1.22.0
     #   itemloaders
     #   parsel
     #   scrapy
-websockets==10.1
+websockets==10.2
     # via
     #   pyppeteer
     #   undetected-chromedriver
-werkzeug==2.0.2
+werkzeug==2.0.3
     # via flask
 wsproto==1.0.0
     # via
@@ -259,7 +261,7 @@ wsproto==1.0.0
     #   trio-websocket
 zipp==3.7.0
     # via importlib-metadata
-zope.interface==5.4.0
+zope-interface==5.4.0
     # via
     #   scrapy
     #   twisted
